crates/solidity-v2/testing/snapshots/diagnostics_output/type_system/comparison_operators/error/generated/0.8.0-failure.txt
# This file is generated automatically by infrastructure scripts. Please don't edit by hand.

Diagnostics: 1

Error: This syntax was introduced in version '0.8.4'.
   ╭─[input.sol:1:1]
   │
 1 │ error MyCustomError(uint, bool);
   │ ────────────────┬───────────────  
   │                 ╰───────────────── Error occurred here.
───╯
